fix alignment on outgoing links

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -129,9 +129,10 @@
 
 .doc a[href^="http://"]:not([href*="#"]):before,
 .doc a[href^="https://"]:not([href*="#"]):before {
-    content: "\e926";
+    content: "\e940";
     font-family: plenty-icons;
-    padding: .1rem .25rem;
+    padding: .25rem;
+    vertical-align: top;
 }
 
 .doc i.fa {
